fix(pseudoinput-fix): ашч badge size \& alignment in stories

--- a/src/components/PseudoInput/_stories/PseudoInput.module.scss
+++ b/src/components/PseudoInput/_stories/PseudoInput.module.scss
@@ -22,3 +22,14 @@
   align-items: end;
   gap: 8px;
 }
+
+.custom {
+  [data-ui-pseudo-input-suffix-container] {
+    align-items: center !important;
+  }
+
+  [data-ui-pseudo-input-children] {
+    position: relative;
+    top: 0 !important;
+  }
+}
